[FFS-4489] build a v1 of the education API that matches the current proposed NSC specs (#94)
* [FFS-4489] build a v1 of the education API that matches the current proposed specs

starting with the request portion, will do a follow up PR adjusting the response portion.

* add terms

---------
