# rails-app/app/controllers/api/v1/education_enrollments_controller.rb
@@ -1,5 +1,5 @@
 module Api
-  module V0
+  module V1
     class EducationEnrollmentsController < ApplicationController
       def create
         reporter = Reporting::Reporter.new
@@ -17,10 +17,10 @@ module Api
         end
 
         req_params = params.permit(
-          :firstName, :lastName, :dateOfBirth, :ssn, :middleName,
-          address: [ :street1, :street2, :street3, :city, :state, :postalCode, :country ]
+          :personSocialSecurityNumber, :personGivenName, :personMiddleName, :personSurName, :personBirthDate, :asOfDate, :termsAcceptedIndicator,
+          previousNames: [ :personGivenName, :personMiddleName, :personSurName ]
         ).to_h.deep_symbolize_keys
-        enrollment_req = Education::EnrollmentRequest.new(req_params)
+        enrollment_req = Education::EnrollmentRequestV1.new(req_params)
 
         coordinator = Education::ServiceCoordinator.new
         begin
@@ -62,9 +62,9 @@ module Api
       private
 
       def missing_education_identity_field
-        return "firstName" if params[:firstName].blank?
-        return "lastName" if params[:lastName].blank?
-        return "dateOfBirth" if params[:dateOfBirth].blank?
+        return "personGivenName" if params[:personGivenName].blank?
+        return "personSurName" if params[:personSurName].blank?
+        return "personBirthDate" if params[:personBirthDate].blank?
         nil
       end
     end
